--- a/src/index.html
+++ b/src/index.html
@@ -10,22 +10,18 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a href="indexRU.html">EN/RU</a>
-        <ul>
-          <li><a href="#">ABOUT US</a></li>
-        </ul>
-        <ul>
-          <li><a href="#">HISTORY</a></li>
-        </ul>
-        <ul>
-          <li><a href="#">OUR PRODUCTS</a></li>
-        </ul>
-        <ul>
-          <li><a href="#">OUR CONTACTS</a></li>
-        </ul>
-      </nav>
+      <img src="img/BG Image.jpeg" alt="" />
     </header>
+    <nav>
+      <a href="indexRU.html">EN/RU</a>
+      <ul>
+        <li><a href="#">ABOUT US</a></li>
+        <li><a href="#">HISTORY</a></li>
+        <li><a href="#">OUR PRODUCTS</a></li>
+        <li><a href="#">OUR CONTACTS</a></li>
+      </ul>
+    </nav>
+
     <main>
       <section></section>
       <section></section>
