--- a/src/indexRU.html
+++ b/src/indexRU.html
@@ -10,22 +10,18 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a href="index.html">EN/RU</a>
-        <ul>
-          <li><a href="#">О НАС</a></li>
-        </ul>
-        <ul>
-          <li><a href="#">ИСТОРИЯ ИГРУШЕК</a></li>
-        </ul>
-        <ul>
-          <li><a href="#">НАШИ ШЕДЕВРЫ</a></li>
-        </ul>
-        <ul>
-          <li><a href="#">НАШИ КОНТАКТЫ</a></li>
-        </ul>
-      </nav>
+      <img src="img/BG Image.jpeg" alt="" />
     </header>
+    <nav>
+      <a href="index.html">EN/RU</a>
+      <ul>
+        <li><a href="#">О НАС</a></li>
+        <li><a href="#">ИСТОРИЧНОСТЬ</a></li>
+        <li><a href="#">НАШИ ШЕДЕВРЫ</a></li>
+        <li><a href="#">НАШИ КОНТАКТЫ</a></li>
+      </ul>
+    </nav>
+
     <main>
       <section></section>
       <section></section>
