--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <nav>
       <a href="indexRU.html">EN/RU</a>
       <ul>
-        <li><a href="#">ABOUT US</a></li>
+        <li><a href="indexabouten.html">ABOUT US</a></li>
         <li><a href="#">HISTORY</a></li>
         <li><a href="#">OUR PRODUCTS</a></li>
         <li><a href="#">OUR CONTACTS</a></li>
