--- a/src/indexabouten.html
+++ b/src/indexabouten.html
@@ -13,12 +13,12 @@
       <img src="img/BG Image.jpeg" alt="" />
     </header>
     <nav>
-      <a href="index.html">EN/RU</a>
+      <a href="indexRU.html">EN/RU</a>
       <ul>
-        <li><a href="indexaboutru.html">О НАС</a></li>
-        <li><a href="#">ИСТОРИЧНОСТЬ</a></li>
-        <li><a href="#">НАШИ ШЕДЕВРЫ</a></li>
-        <li><a href="#">НАШИ КОНТАКТЫ</a></li>
+        <li><a href="#">ABOUT US</a></li>
+        <li><a href="#">HISTORY</a></li>
+        <li><a href="#">OUR PRODUCTS</a></li>
+        <li><a href="#">OUR CONTACTS</a></li>
       </ul>
     </nav>
 
